backend/services/Judge0/express-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-server
  namespace: server
spec:
  selector:
    app: express-server
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP

# This Service allows other pods in the cluster (like Judge0) to talk to your Express API via 
# http://express-server.server.svc.cluster.local.
